# rust-blog

./: .gitignore  Cargo.toml  README.md  docker-compose.full.yml  docker-compose.yml
.sqlx/: query-12b5960316be07a9d3fc3d9d0c71ade7cc6607595ce35f89945eb906432771fd.json  query-214a19b7b3e2d3adf9cec96da320b64ebf1ff0383c65c168cd6c3b936cbd8458.json  query-26fef19913f5aad140e4f6337630ce93820a94f4ed70d9829c45b41233c14f68.json  query-2923761d0121aa1424788905f0481c6b7146d868a22cc7a84507f265c2a2779a.json  query-2f17fca8127607672da97645ecfbe54ef7502eec74162721314cea19fe62178c.json  query-300486b3338cc7e8f0fe4f4728dabb6034b6b6051e78a3e29b912ffa214878a6.json  query-94dd1adf180b94338bafba0087426133ff57072f567a828e86d9cfc5d9d38729.json  query-eb22c3be44c7a6a5dd6ca9b36d10c6154459481c0927c04865be34690302f4a8.json  query-f16eab080ce8d0a2a76568da44cc7e40c422e0c40a71ae999a937126652f8e62.json
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  models.rs
blog-client/tests/: smoke.rs
blog-server/: .env.example  Cargo.toml  Dockerfile  build.rs
blog-server/.sqlx/: query-9e03077e207413290d59f273519411adb63d184f9e7b46d4bbf70dff2dbfc658.json
blog-server/migrations/: 20260217000001_create_users.sql  20260217000002_create_posts.sql  20260223000003_alter_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs  server.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/data/repositories/postgres/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  jwt.rs  logging.rs  mod.rs  settings.rs
blog-server/src/presentation/: app_error.rs  http_handlers.rs  mod.rs  openapi.rs
blog-server/src/presentation/grpc/: interceptors.rs  mappers.rs  mod.rs  proto.rs  service.rs  status.rs
blog-server/src/presentation/handlers/: auth.rs  posts.rs
blog-server/src/presentation/http/: app_error.rs  mod.rs  openapi.rs  router.rs
blog-server/src/presentation/http/handlers/: auth.rs  posts.rs
blog-server/src/presentation/http/middleware/: auth.rs  mod.rs
blog-server/src/presentation/http/routes/: auth.rs  mod.rs  posts.rs
blog-server/src/presentation/middleware/: auth.rs  cors.rs  trace.rs
blog-server/src/presentation/routes/: auth.rs  mod.rs  posts.rs
blog-wasm/: Cargo.toml  Dockerfile  index.html  nginx.conf  style.css
blog-wasm/src/: api.rs  app.rs  main.rs  models.rs  state.rs  storage.rs
blog-wasm/src/components/: auth_panel.rs  mod.rs  posts_panel.rs
