[package]
name = "blog-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "blog-cli"
path = "src/main.rs"

[dependencies]
blog-client = { path = "../blog-client" }

tokio = { workspace = true }
clap = { workspace = true }

anyhow = { workspace = true }
dotenvy = { workspace = true }
serde_json = { workspace = true }
