[package]
name = "blog-client"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[lib]
name = "blog_client"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# gRPC client + protobuf runtime
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
