[package]
name = "blog-server"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "blog-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

dotenvy = { workspace = true }
sqlx = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }

validator = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }

# gRPC / protobuf runtime
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
